# template-rs-yew

./: .gitpod.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  index.html  trunk.dockerfile
.artifacts/license/: APACHE.LICENSE
.github/: dependabot.yml
.github/workflows/: clippy.yml  docker.yml  rust.yml
src/components/nav/: navbar.rs  sidebar.rs
src/core/: application.rs
src/core/routes/: mod.rs
src/core/routes/home/: view.rs
