[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
default-run = "web"
description = "template-tailwindcss-yew"
edition = "2021"
homepage = "https://github.com/FL03/template-tailwindcss-yew/wiki"
keywords = ["wasm"]
license = "Apache-2.0"
name = "template-tailwindcss-yew"
readme = "README.md"
repository = "https://github.com/FL03/template-tailwindcss-yew"
version = "0.1.0"

[[bin]]
bench = false
doctest = false
name = "web"
path = "src/bin/web.rs"
test = false

[features]
default = ["core"]
full = ["core"]

core = []

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]
yew = "0.20"

[dependencies]
console_error_panic_hook = { optional = true, version = "0.1" }
dotenv_codegen = "0.15"
futures = "0.3"
gloo = "0.10"
js-sys = "0.3"
lazy_static = "1.4"
log = "0.4"
lru = "0.10"
parking_lot = "0.12"
plotters = { features = [], version = "0.3" }
pulldown-cmark = "0.9.2"
serde = { features = ["derive"], version = "1" }
serde_json = "1"
thiserror = "1"
tokio = "1"
tokio-stream = "0.1"

# wasm
wasm-bindgen = { features = ["serde-serialize"], version = "0.2" }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"

# UI
yew = "0.20"
yew-hooks = "0.2"
yew-router = "0.17"

[dependencies.web-sys]
features = [
    "Client",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "Headers",
    "Node",
    "Request", 
    "RequestInit", 
    "RequestMode", 
    "Response", 
    "Window",
    "console"
]
 version = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
panic = 'unwind'
rpath = false
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = false
panic = 'unwind'
rpath = false
opt-level = 'z'
overflow-checks = false